--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -77,6 +77,7 @@ jobs:
           name: Boss Key ${{ github.ref_name }}
           append_body: |
             The executable file for version ${{ github.ref_name }}
+          overwrite: true
           make_latest: true
           tag_name: ${{ github.ref_name }}
           draft: false
@@ -120,6 +121,7 @@ jobs:
       uses: softprops/action-gh-release@v2
       with:
         files: .github/inno-script/output/Boss-Key-${{ github.ref_name }}-Installer.exe
+        overwrite: true
         token: ${{ secrets.RELEASE }}
         tag_name: ${{ github.ref_name }}
         draft: false
