修复标记发布工作流中项目上传的路径

--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -64,7 +64,7 @@ jobs:
         with:
           name: ${{ github.ref_name }}-Build
           path: |
-            out/Boss-Key.dist
+            out/Boss-Key.dist/
             
       - name: Release
         uses: softprops/action-gh-release@v2
