修复生成测试工作流中的项目路径

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           name: Build-Test-Build
           path: |
-            out/Boss-Key.dist
+            out/Boss-Key.dist/
 
   deploy-test:
     environment:
